# void-stack

./: .gitignore  .void-audit-ignore  BOARD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  example-devlaunch.toml  example-void-stack.toml  install.ps1  install.sh  manifest.json  void-stack-analysis.md  void-stack-audit.md  void-stack-diagrams.drawio
crates/devlaunch-cli/: Cargo.toml
crates/devlaunch-cli/src/: main.rs
crates/devlaunch-core/: Cargo.toml
crates/devlaunch-core/src/: backend.rs  config.rs  error.rs  global_config.rs  hooks.rs  lib.rs  manager.rs  model.rs  runner.rs  security.rs
crates/devlaunch-core/src/analyzer/: complexity.rs  cross_project.rs  docs.rs  graph.rs  history.rs  mod.rs
crates/devlaunch-core/src/analyzer/best_practices/: go_bp.rs  mod.rs  python.rs  react.rs  (+2 more)
crates/devlaunch-core/src/audit/: config_check.rs  deps.rs  findings.rs  mod.rs  secrets.rs  vuln_patterns.rs
crates/devlaunch-core/src/detector/: clippy.rs  cuda.rs  env.rs  flutter.rs  mod.rs  ollama.rs  python.rs  ruff.rs  rust_lang.rs
crates/devlaunch-core/src/diagram/: api_routes.rs  architecture.rs  db_models.rs  drawio.rs  mod.rs
crates/devlaunch-core/src/runner/: local.rs
crates/devlaunch-core/src/space/: mod.rs
crates/devlaunch-daemon/: Cargo.toml
crates/devlaunch-daemon/src/: lifecycle.rs  main.rs  server.rs
crates/devlaunch-desktop/: Cargo.toml  tauri.conf.json
crates/devlaunch-desktop/frontend/: index.html  package-lock.json  package.json
crates/devlaunch-desktop/frontend/src/: App.tsx  styles.css  types.ts
crates/devlaunch-desktop/src/: main.rs  state.rs
crates/devlaunch-desktop/src/commands/: analysis.rs  audit.rs  dependencies.rs  diagrams.rs  docs.rs  logs.rs  mod.rs  projects.rs  services.rs  space.rs
crates/devlaunch-mcp/: Cargo.toml
crates/devlaunch-mcp/src/: main.rs  server.rs
crates/devlaunch-proto/: Cargo.toml  build.rs
crates/devlaunch-proto/proto/: devlaunch.proto
crates/devlaunch-proto/src/: client.rs  lib.rs
crates/devlaunch-tui/: Cargo.toml
crates/devlaunch-tui/src/: app.rs  main.rs  ui.rs
crates/void-stack-cli/: Cargo.toml
crates/void-stack-cli/src/: main.rs
crates/void-stack-cli/src/commands/: analysis.rs  board.rs  bootstrap.rs  briefing.rs  commit.rs  context.rs  contracts.rs  daemon.rs  deps.rs  docker.rs  doctor.rs  env.rs  handoff.rs  mod.rs  project.rs  service.rs  setup.rs  stats.rs
crates/void-stack-core/: Cargo.toml
crates/void-stack-core/src/: backend.rs  board.rs  boardhistory.rs  bootstrap.rs  briefing.rs  claudeignore.rs  commitmsg.rs  config.rs  context.rs  deadcode.rs  diff.rs  doctor.rs  envcheck.rs  error.rs  file_reader.rs  fs_util.rs  git_util.rs  global_config.rs  handoff.rs  hooks.rs  ignore.rs  lib.rs  log_filter.rs  manager.rs  model.rs  process_util.rs  project_config.rs  review.rs  runner.rs  security.rs  stats.rs  testing.rs  timeline.rs  todosync.rs  vector_index.rs
crates/void-stack-core/src/ai/: config.rs  mod.rs  ollama.rs  prompt.rs  suggestions.rs
crates/void-stack-core/src/analyzer/: complexity.rs  cross_project.rs  docs.rs  explicit_debt.rs  graph.rs  history.rs  mod.rs
crates/void-stack-core/src/audit/: config_check.rs  context.rs  deps.rs  enrichment.rs  findings.rs  mod.rs  secrets.rs  suppress.rs
crates/void-stack-core/src/detector/: clippy.rs  cuda.rs  docker.rs  env.rs  exec.rs  flutter.rs  flutter_analyze.rs  golang.rs  golangci_lint.rs  mod.rs  node.rs  ollama.rs  python.rs  react_doctor.rs  ruff.rs  rust_lang.rs  types.rs
crates/void-stack-core/src/diagram/: api_routes.rs  architecture.rs  db_models.rs  drawio.rs  graph_html.rs  ir.rs  mod.rs  service_detection.rs
crates/void-stack-core/src/docker/: generate_compose.rs  generate_dockerfile.rs  helm.rs  kubernetes.rs  mod.rs  parse.rs  terraform.rs
crates/void-stack-core/src/global_config/: mod.rs  paths.rs  project_ops.rs  scanner.rs
crates/void-stack-core/src/log_filter/: dedup.rs  mod.rs  rules.rs  truncate.rs
crates/void-stack-core/src/manager/: logs.rs  mod.rs  process.rs  state.rs  url.rs
crates/void-stack-core/src/runner/: docker.rs  local.rs
crates/void-stack-core/src/space/: mod.rs
crates/void-stack-core/src/structural/: graph.rs  mod.rs  model.rs  parser.rs  query.rs
crates/void-stack-core/src/vector_index/: chunker.rs  cluster.rs  contracts.rs  contracts_check.rs  db.rs  graphrag.rs  indexer.rs  mod.rs  search.rs  stats.rs  voidignore.rs
crates/void-stack-core/tests/: README.md  integration_analysis.rs
crates/void-stack-daemon/: Cargo.toml
crates/void-stack-daemon/src/: lifecycle.rs  main.rs  server.rs
crates/void-stack-desktop/: Cargo.toml  tauri.conf.json
crates/void-stack-desktop/capabilities/: default.json
crates/void-stack-desktop/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/void-stack-desktop/frontend/src/: App.tsx  main.tsx  styles.css  types.ts
crates/void-stack-desktop/icons/: icon.icns
crates/void-stack-desktop/src/: main.rs  state.rs
crates/void-stack-desktop/src/commands/: analysis.rs  audit.rs  board.rs  briefing.rs  debt.rs  dependencies.rs  diagrams.rs  docker.rs  docs.rs  editor.rs  intel.rs  logs.rs  mod.rs  projects.rs  scan.rs  search.rs  services.rs  space.rs  stats.rs  suggest.rs
crates/void-stack-mcp/: Cargo.toml
crates/void-stack-mcp/src/: main.rs  server.rs  types.rs
crates/void-stack-mcp/src/tools/: analysis.rs  board.rs  briefing.rs  context.rs  debt.rs  diagrams.rs  docker.rs  docs.rs  doctor.rs  graph.rs  handoff.rs  mod.rs  orchestration.rs  projects.rs  review.rs  search.rs  services.rs  setup.rs  space.rs  stats.rs  structural.rs  suggest.rs  suppressions.rs
crates/void-stack-proto/: Cargo.toml  build.rs
crates/void-stack-proto/proto/: void_stack.proto
crates/void-stack-proto/src/: client.rs  lib.rs
crates/void-stack-tui/: Cargo.toml
crates/void-stack-tui/src/: app.rs  i18n.rs  main.rs  ui.rs
crates/void-stack-tui/src/ui/: analysis.rs  debt.rs  footer.rs  header.rs  help.rs  mod.rs  projects.rs  security.rs  services.rs  space.rs  stats.rs  tabs.rs
(+184 files in other folders)
