[workspace]
resolver = "2"
members = [
    "crates/devlaunch-core",
    "crates/devlaunch-proto",
    "crates/devlaunch-daemon",
    "crates/devlaunch-tui",
    "crates/devlaunch-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["TheBlackWidow"]
license = "MIT"
description = "Unified launcher, monitor and manager for development services"

[workspace.dependencies]
# Internal
devlaunch-core = { path = "crates/devlaunch-core" }
devlaunch-proto = { path = "crates/devlaunch-proto" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "6"
tokio-stream = "0.1"
