[workspace]
resolver = "2"
members = [
    "crates/void-stack-core",
    "crates/void-stack-proto",
    "crates/void-stack-daemon",
    "crates/void-stack-tui",
    "crates/void-stack-cli",
    "crates/void-stack-mcp",
    "crates/void-stack-desktop",
]

[workspace.package]
version = "0.22.7"
edition = "2024"
authors = ["Enmanuel Molina <mague>"]
license = "Apache-2.0"
description = "Unified launcher, monitor and manager for development services"

[workspace.dependencies]
# Internal
void-stack-core = { path = "crates/void-stack-core" }
void-stack-proto = { path = "crates/void-stack-proto" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "6"
tokio-stream = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1"
