[package]
name = "devlaunch-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for DevLaunch"

[[bin]]
name = "devlaunch"
path = "src/main.rs"

[dependencies]
devlaunch-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
