[package]
name = "devlaunch-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for DevLaunch - exposes service management tools to AI assistants"

[[bin]]
name = "devlaunch-mcp"
path = "src/main.rs"

[dependencies]
devlaunch-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
