[package]
name = "devlaunch-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protobuf/gRPC definitions for DevLaunch daemon"

[dependencies]
devlaunch-core.workspace = true
tonic.workspace = true
prost.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-build.workspace = true
