[package]
name = "devlaunch-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI dashboard for DevLaunch"

[[bin]]
name = "devlaunch-tui"
path = "src/main.rs"

[dependencies]
devlaunch-core = { workspace = true }
devlaunch-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
