[package]
name = "void-stack-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri v2 desktop UI for Void Stack"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
void-stack-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
default = []
vector = ["void-stack-core/vector"]
