[package]
name = "void-stack-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri v2 desktop UI for Void Stack"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
void-stack-core = { workspace = true, features = ["vector", "structural"] }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
default = ["vector", "structural"]
vector = ["void-stack-core/vector"]
structural = ["void-stack-core/structural"]
full = ["vector", "structural"]
# Release installs MUST enable this (or build with `cargo tauri build`,
# which enables it implicitly): without it the binary ignores the
# embedded frontendDist and loads devUrl — a blank window outside dev.
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
