[package]
name = "void-stack-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for Void Stack - exposes service management tools to AI assistants"

[[bin]]
name = "void-stack-mcp"
path = "src/main.rs"

[dependencies]
void-stack-core = { workspace = true, features = ["vector", "structural"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }

[features]
default = ["vector", "structural"]
vector = ["void-stack-core/vector"]
structural = ["void-stack-core/structural"]
full = ["vector", "structural"]
