[package]
name = "void-stack-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI dashboard for Void Stack"

[[bin]]
name = "void-stack-tui"
path = "src/main.rs"

[dependencies]
void-stack-core = { workspace = true, features = ["vector", "structural"] }
void-stack-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["vector", "structural"]
vector = ["void-stack-core/vector"]
structural = ["void-stack-core/structural"]
full = ["vector", "structural"]
